--- a/psdaq/psdaq/cnf/lab3-caf-encoder.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-encoder.cnf
@@ -21,11 +21,15 @@ procmgr_config = [
  {                        id:'groupca',flags:'s', env:epics_env, cmd:'groupca DAQ:LAB2 2 1'},
  {                        id:'procstat', flags:'p', cmd:'procstat p'+platform+'.cnf.last'},
  { host: collect_host,    id:'control', flags:'sxpu', env:epics_env, cmd:'control -v -C BEAM -P '+hutch+' -B DAQ:LAB2 -x 2 --user '+user+' --password '+password},
- {                        flags:'xp', id:'control_gui', cmd:'control_gui -E -t 30000 -l WARNING -H '+collect_host},
+ {                        flags:'p', id:'control_gui', cmd:'control_gui -E -t 30000 -l WARNING -H '+collect_host},
  # trigger event builder
- { host: 'drp-tst-dev009', id:'teb1', flags:'xpu', cmd:'teb -P '+hutch+' -C '+collect_host},
- # encoder
- { host: 'daq-tst-dev03',  id:'usdusb',    flags:'sx',   cmd:'usdusb -a 239.255.25.4 -i enp1s0f1 -1 43 -v -T /dev/tpra4,0,0,10'},
- # drp
- { host: 'drp-tst-dev009', id:'drp_bld_0', flags:'sxpu', cmd:'drp_bld -o ~caf/data -l 0x1 -k "interface=eno1,batching=no" -D usdusb -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
+ { host: 'drp-tst-dev009', id:'teb1', flags:'pu', cmd:'teb -P '+hutch+' -C '+collect_host},
+ # meb
+ { host: 'drp-tst-dev009', id:'meb1', flags:'spu', cmd:'monReqServer -P '+hutch+' -d -q 4 -C '+collect_host},
+ # ...drp: loopback on port 5007
+ { host: 'drp-tst-dev009', id:'encoder_0', flags:'sxpu', cmd:'drp_udp -o /cds/home/c/caf/data -L 5007    -P tst -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
+ # ...drp: verbose
+ #{ host: 'drp-tst-dev009', id:'encoder_0', flags:'sxpu', cmd:'drp_udp -o /cds/home/c/caf/data         -v -P tst -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
+ #  ...drp: loopback on port 5007 AND verbose
+ #{ host: 'drp-tst-dev009', id:'encoder_0', flags:'sxpu', cmd:'drp_udp -o /cds/home/c/caf/data -L 5007 -v -P tst -d /dev/datadev_1 -P '+hutch+' -C '+collect_host}
 ]
